<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:hint="@string/contrase_a" />

                <EditText
                    android:id="@+id/password2ET"
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:hint="@string/repita_contrase_a" />

            <CheckBox
                    android:id="@+id/aceptoCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35pt"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/he_leido_y_acepto_los_terminos" />

                <Button
                    android:id="@+id/registrarseBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:text="@string/registrarse"
                    android:textColorHint="@color/white"
                    android:backgroundTint="#8FA5D5"/>
                <Button
                    android:id="@+id/regresarBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:text="@string/volver_pantalla_inicio"
                    android:textColorHint="@color/white"
                    android:backgroundTint="#8FA5D5"/>
        </LinearLayout>
</ScrollView>