<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="442dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>


    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/passwordForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:onClick="clickTextView"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="¿Has olvidado tu contraseña?"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:onClick="clickTextView"
        android:layout_marginTop="18dp"
        android:padding="6dp"
        android:text="Registrate"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/BtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:backgroundTint="#8FA5D5"
        android:onClick="@{()-> viewModel.onLoginClicked()}"
        android:text="Iniciar sesion" />


</LinearLayout>
=======
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity2"
            android:orientation="vertical" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="182dp" app:srcCompat="@drawable/adoptaunamascota"
                android:id="@+id/imageView3"
        />
        <TextView
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>
        <EditText
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombreET"
                android:hint="@string/nombre"
        />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/apellidosET"
                android:hint="@string/apellidos"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/emailET"
                android:hint="@string/email"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/passwordET"
                android:hint="@string/contrase_a"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/password2ET"
                android:hint="@string/repita_contrase_a"
        />
        <CheckBox
                android:text="@string/he_leido_y_acepto_los_terminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/aceptoCB"

                />
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:hint="@string/registrarse"
                android:textColorHint="@color/white"
                android:id="@+id/registrarseBTN"
                android:backgroundTint="#8FA5D5"


        />
        <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listaEnemigosLV"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>